# wifimon

./: .gitignore  Cargo.toml  README.md  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: args.rs  config.rs  error.rs  lib.rs  main.rs  monitor.rs  network.rs  notify.rs  state.rs  ui.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: cli.rs  network.rs
