[package]
name = "wifimon"
version = "0.1.2"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "Professional Wi-Fi monitoring CLI with Growl/GNTP notifications"
homepage = "https://github.com/cumulus13/wifimon"
repository = "https://github.com/cumulus13/wifimon"
license = "MIT"
keywords = ["wifi", "monitor", "network", "notification", "growl"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
exclude = [".github/", "tests/"]

[[bin]]
name = "wifimon"
path = "src/main.rs"

[lib]
name = "wifimon"
path = "src/lib.rs"

[dependencies]
clap        = { version = "4", features = ["derive", "env", "color"] }
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
colored     = "2"
gntp        = "0.1"
wildmatch   = "2"

# ── Windows: pure Win32 WLAN API — no PowerShell, no WMI, no COM ─────────────
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Threading",
    "Win32_System_Registry",     # for friendly interface name lookup
] }

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
